[tool.poetry]
name = "package-stats"
version = "0.1.0"
description = "small fastapi app to workshop with dagger.io"
authors = ["Travis Burke"]
license = "MIT"
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
requests = "^2.30.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
